✅ Added summarizer tests and finalized summarizer module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "pubmed-fetcher"
 version = "0.1.0"
 description = "CLI tool to fetch and filter PubMed research papers"
-authors = [{ name = "Pavan Kalyan", email = "you@example.com" }]
+authors = [{ name = "Pavan Kalyan", email = "pavanneelam96@gmail.com" }]
 requires-python = ">=3.10"
 readme = "README.md"
 license = { text = "MIT" }
@@ -11,17 +11,24 @@ dependencies = [
     "requests",
     "rich",
     "python-dotenv",
+    "fpdf"
 ]
 
 [project.scripts]
-get-papers-list = "pubmed_fetcher.cli:main"
+pubmed-cli = "pubmed_fetcher.cli:main"
 
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.4.1"
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.pytest.ini_options]
 pythonpath = "src"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.1"
