Initial commit: Research Paper Fetcher CLI with LLM + RAG support

--- a/.env
+++ b/.env
@@ -1,27 +1,8 @@
-# ================================
-# 🔧 LLM Configuration
-# ================================
-# Ollama server URL (make sure Ollama is running here)
-LLM_CHAT_URL=http://localhost:11434/api/chat
-
-# Model name as installed/configured in Ollama
+# .env
+LLM_PROVIDER=ollama
 LLM_MODEL_NAME=mistral
-
-# Whether to enable LLM calls in your app
+LLM_CHAT_URL=http://localhost:11434/api/chat
 USE_LLM=true
-# Maximum tokens for LLM responses
-LLM_MAX_TOKENS=4096
-LLM_TEMPERATURE=0.7
-
-# ================================
-# 🔍 Embedding Model Configuration
-# ================================
-EMBED_MODEL=all-MiniLM-L6-v2
-
-# ================================
-# 📦 Vector Index Configuration
-# ================================
-FAISS_INDEX_PATH=faiss_index.bin
-FAISS_META_PATH=metadata.json
-EMBED_DIM=384
-TOP_K=3
+LLM_DEBUG=true
+DEBUG=false
+export POETRY_PYPI_TOKEN_TESTPYPI=your-token-here
